--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -105,14 +105,16 @@ body{
             width:100%;
         }
 
-        .FormaInputDatos input{
+        .FormaInputDatos textarea{
+				height: 30vh;
             padding:10px 20px;
             margin-top:8px;
             border-radius: 10px;
             border: 1px solid var(--ColorGrisOscuro);
         }
 
-        .FormaInputDatos input[type="submit"]{
+        .FormaInputDatos button[type="submit"]{
+				cursor:pointer;	
             background-color: var(--ColorAzulOscuro);
             color: var(--ColorGrisClaro);
             padding:10px 30px;
