corrige display none y formulario adicional eliminado

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -86,7 +86,7 @@ body{
             display:flex;
             flex-direction: column;
             align-items: center;
-            display: none;
+            /* display: none; */
             padding-top:20px;
         }
 
